Bug 624703 - Add driver version to "App Notes" field of crash reports - r=jmuizelaar, a=joe